tsc added to package

--- a/extension/package.json
+++ b/extension/package.json
@@ -19,6 +19,7 @@
     "build": "npm run compile",
     "build:dev": "npm run compile:dev && npm run postbuild",
     "postbuild": "npm run package-extension -- --rev-version",
+    "tsc": "tsc app.ts --lib es2015",
     "package-extension": "tfx extension create --manifests azure-devops-extension.json",
     "publish-extension": "tfx extension publish --manifests azure-devops-extension.json"
   },
