--- a/extension/package.json
+++ b/extension/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@types/node": "^7.0.0",
     "@types/request-promise": "~4.1.41",
+    "@types/fs-extra": "5.0.2",
     "azure-pipelines-task-lib": "^2.9.3",
     "q": "^1.5.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "fs-extra": "7.0.1"
   }
 }
